[package]
name = "ecp"
version = "0.1.1"
description = "easily build compiler plugins."
keywords = ["easy", "compiler", "plugin"]
authors = ["fengcen <fengcen.love@gmail.com>"]
repository = "https://github.com/fengcen/ecp.git"
homepage = "https://github.com/fengcen/ecp"
readme = "README.md"
license = "MIT"


[lib]
name = "ecp"
path = "src/lib.rs"

[dependencies]
